Squash bugs on UI, order of functions

--- a/src/css/_rooms-section.scss
+++ b/src/css/_rooms-section.scss
@@ -250,3 +250,44 @@ select {
   color: #989898;
   margin-left: 130px;
 }
+
+.book-room {
+  width: 100px;
+}
+
+.select-room-article {
+  width: 100%;
+}
+
+.booking-result-4 {
+  height: 98px;
+  border-left: 2px lightgray solid;
+  padding-left: 10px;
+  width: 350px
+}
+
+.booking-result-5 {
+  border-left: 2px lightgray solid;
+  padding-left: 10px;
+  height: 98px;
+}
+
+.booking-result-6 {
+  width: 300px;
+  height: 98px;
+  display: flex;
+  border: 2px solid lightgray;
+  border-radius: 8px;
+  padding: 10px;
+  align-items: center;
+  flex-direction: column;
+
+  h1 {
+    padding: 0;
+    margin: 0;
+  }
+}
+
+#search-results {
+  width: 100%;
+}
